--- a/etc/make.conf
+++ b/etc/make.conf
@@ -15,7 +15,7 @@ INPUT_DEVICES="keyboard mouse evdev synaptics"
 VIDEO_CARDS="intel vesa fbdev"
 USE="mmx sse sse2" # cpu
 USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal" # no thanks
-USE="${USE} emacs kerberos vnc semantic-desktop" #sw
+USE="${USE} emacs kerberos vnc semantic-desktop python perl" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
 USE="${USE} avahi zeroconf" #net
 USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp" #media
