--- a/boot/grub/grub.conf
+++ b/boot/grub/grub.conf
@@ -8,6 +8,10 @@ default 0
 timeout 30
 splashimage=(hd0,0)/boot/grub/splash.xpm.gz
 
+title Gentoo Linux 3.0.6
+root (hd0,0)
+kernel /boot/kernel-3.0.6-gentoo root=/dev/sda5
+
 title Gentoo Linux 2.6.39-r3
 root (hd0,0)
 kernel /boot/kernel-2.6.39-gentoo-r3 root=/dev/sda5
