power management work

--- a/boot/grub/grub.conf
+++ b/boot/grub/grub.conf
@@ -10,7 +10,7 @@ splashimage=(hd0,0)/boot/grub/splash.xpm.gz
 
 title Gentoo Linux 3.0.6
 root (hd0,0)
-kernel /boot/kernel-3.0.6-gentoo root=/dev/sda5
+kernel /boot/kernel-3.0.6-gentoo root=/dev/sda5 pcie_aspm=force i915.i915_enable_rc6=1
 
 title Gentoo Linux 2.6.39-r3
 root (hd0,0)
