--- a/etc/make.conf
+++ b/etc/make.conf
@@ -13,6 +13,9 @@ FEATURES="parallel-fetch"
 GRUB_PLATFORMS="efi-64"
 INPUT_DEVICES="keyboard mouse evdev synaptics"
 VIDEO_CARDS="intel vesa fbdev"
+DISTDIR="/home/distfiles/"
+PKGDIR="/home/packages/"
+PORTAGE_TMPDIR="/home/tmp/"
 USE="mmx sse sse2" # cpu
 USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal" # no thanks
 USE="${USE} emacs kerberos vnc semantic-desktop python perl" #sw
