--- a/boot/grub/grub.conf
+++ b/boot/grub/grub.conf
@@ -8,6 +8,10 @@ default 0
 timeout 30
 splashimage=(hd0,0)/boot/grub/splash.xpm.gz
 
+title Gentoo Linux 3.1.6
+root (hd0,0)
+kernel /boot/kernel-3.1.6-gentoo root=/dev/sda5 pcie_aspm=force i915.i915_enable_rc6=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1
+
 title Gentoo Linux 3.0.6
 root (hd0,0)
 kernel /boot/kernel-3.0.6-gentoo root=/dev/sda5 pcie_aspm=force i915.i915_enable_rc6=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1
