horizontal 2finger scroll

--- a/etc/X11/xorg.conf.d/50-synaptics.conf
+++ b/etc/X11/xorg.conf.d/50-synaptics.conf
@@ -7,4 +7,5 @@ Section "InputClass"
 #			Option "TapButton2" "2"
 #			Option "TapButton3" "3"
 	Option	"GuestMouseOff" "1"
+        Option "HorizTwoFingerScroll" "on"
 EndSection
