--- a/etc/make.conf
+++ b/etc/make.conf
@@ -17,8 +17,8 @@ DISTDIR="/home/distfiles/"
 PKGDIR="/home/packages/"
 PORTAGE_TMPDIR="/home/tmp/"
 USE="mmx sse sse2" # cpu
-USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal" # no thanks
-USE="${USE} emacs kerberos vnc semantic-desktop sqlite" #sw
+USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal -libproxy -semantic-desktop" # no thanks
+USE="${USE} emacs kerberos vnc sqlite" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
 USE="${USE} avahi zeroconf" #net
 USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp" #media
