--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -21,4 +21,4 @@ USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal -libproxy -semantic-desktop" #
 USE="${USE} emacs kerberos vnc sqlite" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
 USE="${USE} avahi zeroconf" #net
-USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp" #media
+USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp pulseaudio" #media
