long time since last update

--- a/etc/bluetooth/audio.conf
+++ b/etc/bluetooth/audio.conf
@@ -4,15 +4,13 @@
 # particular interface
 [General]
 
-# Added by Burt to enable the audio socket
-Enable=Socket
-
 # Switch to master role for incoming connections (defaults to true)
 #Master=true
 
 # If we want to disable support for specific services
 # Defaults to supporting all implemented services
-#Disable=Control,Source
+#Disable=Gateway,Source,Socket
+Enable=Socket # added by Burt
 
 # SCO routing. Either PCM or HCI (in which case audio is routed to/from ALSA)
 # Defaults to HCI
@@ -36,7 +34,7 @@ HFP=true
 MaxConnected=1
 
 # Set to true to enable use of fast connectable mode (faster page scanning)
-# for HFP when incomming call starts. Default settings are restored after
+# for HFP when incoming call starts. Default settings are restored after
 # call is answered or rejected. Page scan interval is much shorter and page
 # scan type changed to interlaced. Such allows faster connection initiated
 # by a headset.
