--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,3 +1,4 @@
+source /var/lib/layman/make.conf
 # These settings were set by the catalyst build script that automatically
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
@@ -8,7 +9,6 @@ CXXFLAGS="${CFLAGS}"
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5 -l5"
-GENTOO_MIRRORS="http://mirrors.rit.edu/gentoo/"
 FEATURES="parallel-fetch"
 GRUB_PLATFORMS="efi-64"
 INPUT_DEVICES="keyboard mouse evdev synaptics"
@@ -22,3 +22,4 @@ USE="${USE} emacs kerberos vnc sqlite" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
 USE="${USE} avahi zeroconf" #net
 USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp pulseaudio" #media
+GENTOO_MIRRORS="http://mirror.mcs.anl.gov/pub/gentoo/ http://www.gtlib.gatech.edu/pub/gentoo http://mirrors.rit.edu/gentoo/"
