--- a/boot/grub/grub.conf
+++ b/boot/grub/grub.conf
@@ -8,6 +8,19 @@ default 0
 timeout 30
 splashimage=(hd0,0)/boot/grub/splash.xpm.gz
 
+title GRUB2 Chainload
+root (hd0,0)
+kernel /boot/grub/i386-pc/core.img
+boot
+
+title Gentoo Linux 3.10.7
+root (hd0,0)
+kernel /boot/kernel-3.10.7-gentoo root=/dev/sda5 i915.i915_enable_rc6=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1
+
+title Gentoo Linux 3.7.2
+root (hd0,0)
+kernel /boot/kernel-3.7.2-gentoo root=/dev/sda5 i915.i915_enable_rc6=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1
+
 title Gentoo Linux 3.6.11
 root (hd0,0)
 kernel /boot/kernel-3.6.11-gentoo root=/dev/sda5 i915.i915_enable_rc6=1 i915.i915_enable_fbc=1 i915.lvds_downclock=1
