--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -10,7 +10,7 @@ CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5 -l5"
 FEATURES="parallel-fetch"
-GRUB_PLATFORMS="efi-64"
+GRUB_PLATFORMS="pc"
 INPUT_DEVICES="keyboard mouse evdev synaptics"
 VIDEO_CARDS="intel vesa fbdev"
 DISTDIR="/home/distfiles/"
@@ -22,4 +22,11 @@ USE="${USE} emacs kerberos vnc sqlite" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
 USE="${USE} avahi zeroconf" #net
 USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp pulseaudio" #media
+
+# Set PORTDIR for backward compatibility with various tools:
+#   gentoo-bashcomp - bug #478444
+#   euse - bug #474574
+#   euses and ufed - bug #478318
+PORTDIR="/usr/portage"
 GENTOO_MIRRORS="http://mirror.mcs.anl.gov/pub/gentoo/ http://www.gtlib.gatech.edu/pub/gentoo http://mirrors.rit.edu/gentoo/"
+#GENTOO_MIRRORS="http://gentoo.mirrors.tds.net/gentoo ftp://gentoo.mirrors.pair.com/ ftp://gentoo.netnitco.net/pub/mirrors/gentoo/source/ http://mirror.datapipe.net/gentoo"
