--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -16,7 +16,8 @@ VIDEO_CARDS="intel vesa fbdev"
 DISTDIR="/home/distfiles/"
 PKGDIR="/home/packages/"
 PORTAGE_TMPDIR="/home/tmp/"
-USE="mmx sse sse2" # cpu
+CPU_FLAGS_X86="aes avx mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+USE="mmx sse sse2" # remove this line 2016/01/30
 USE="${USE} -eds -gnome -gtk -libnotify -qt3 -hal -libproxy -semantic-desktop" # no thanks
 USE="${USE} emacs kerberos vnc sqlite" #sw
 USE="${USE} acpi alsa bluetooth cdr dbus dvd v4l v4l2 wicd X" #hw
@@ -28,5 +29,6 @@ USE="${USE} aac a52 divx djvu flac id3 lame mp4 ogg realmedia video wmp pulseaud
 #   euse - bug #474574
 #   euses and ufed - bug #478318
 PORTDIR="/usr/portage"
-GENTOO_MIRRORS="http://mirror.mcs.anl.gov/pub/gentoo/ http://www.gtlib.gatech.edu/pub/gentoo http://mirrors.rit.edu/gentoo/"
 #GENTOO_MIRRORS="http://gentoo.mirrors.tds.net/gentoo ftp://gentoo.mirrors.pair.com/ ftp://gentoo.netnitco.net/pub/mirrors/gentoo/source/ http://mirror.datapipe.net/gentoo"
+GENTOO_MIRRORS="http://gentoo.cites.uiuc.edu/pub/gentoo/ http://mirror.datapipe.net/gentoo ftp://mirror.datapipe.net/gentoo"
+SANE_BACKENDS=""
